# iota_esp32_wallet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  init.sh  sdkconfig.defaults
components/embear_logger/: CMakeLists.txt
components/http_parser/: CMakeLists.txt  init.sh
components/iota_c/: CMakeLists.txt
components/iota_cclient/: CMakeLists.txt  gen_hash_container.sh  init.sh
components/iota_client/: CMakeLists.txt
components/iota_common/: CMakeLists.txt  init.sh  src_gen_script.py
components/keccak/: CMakeLists.txt  init.sh  keccak_58b20ec99f8a891913d8cf0ea350d05b6fb3ae41.patch
components/uthash/: CMakeLists.txt  init.sh
main/: CMakeLists.txt  Kconfig.projbuild  cli_wallet.c  cli_wallet.h  client_api.c  client_api.h  main.c  sensor.c  sensor.h  wallet_system.c  wallet_system.h
test/: test_main.c
